frontend/tests/cases/negative/effects/badCaseUnify.gr
--- Type-safe null; wrap a computation that could fail
data Maybe a = Nothing | Just a

reflect : forall {a : Type} . Maybe a -> (() -> (a [0..1]) <MayFail>)
reflect mb =
    case mb of
        Nothing -> (\() -> throw);
        Just x -> (\() -> x)